--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tdd:watch": "sh scripts/tests/tdd.sh"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.15",
     "axios": "1.7.2",
     "cloudinary": "2.0.3",
     "config": "3.3.7",
@@ -34,6 +35,7 @@
     "morgan": "1.10.0",
     "multer": "1.4.5-lts.1",
     "newrelic": "11.19.0",
+    "nodemailer": "^6.9.15",
     "passport": "0.7.0",
     "passport-github2": "0.1.12",
     "rate-limiter-flexible": "5.0.3",
