--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer": "1.4.5-lts.1",
     "newrelic": "11.19.0",
     "nodemailer": "^6.9.15",
+    "nodemailer-mock": "^2.0.6",
     "passport": "0.7.0",
     "passport-github2": "0.1.12",
     "rate-limiter-flexible": "5.0.3",
